added async embedings

--- a/notebooks/Data_Reviews_step_3_clustering.ipynb
+++ b/notebooks/Data_Reviews_step_3_clustering.ipynb
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1221,7 @@
     "        # Get the unique values for the current 'type' and 'cluster'\n",
     "        values = cluster_df[(cluster_df['Attribute'] == type) & (cluster_df['cluster'] == cluster)]['Value'].unique()\n",
     "        # Create the message dictionary\n",
-    "        messages = [{\"role\": \"user\", \"content\": f\"{type} : {values}\"}]\n",
+    "        messages = [{\"role\": \"user\", \"content\": f\"The value presented are part of {type}. Provide a single seven words label for this list of values : ```{values}```. \"}]\n",
     "        content_list.append(messages)\n",
     "\n",
     "# Wrap your main coroutine invocation in another async function.\n",
@@ -1368,8 +1368,12 @@
     "total_observations_per_attribute = df_with_clusters.groupby('Attribute').size()\n",
     "\n",
     "attribute_clusters_with_percentage = attribute_clusters_with_percentage.set_index('Attribute')  # set 'Attribute' as the index to allow for division\n",
-    "attribute_clusters_with_percentage['attribute_percentage'] = attribute_clusters_with_percentage['observation_count'] / total_observations_per_attribute * 100\n",
-    "attribute_clusters_with_percentage = attribute_clusters_with_percentage.reset_index()  # reset the index if desired\n"
+    "attribute_clusters_with_percentage['percentage_of_observations_vs_total_number_per_attribute'] = attribute_clusters_with_percentage['observation_count'] / total_observations_per_attribute * 100\n",
+    "attribute_clusters_with_percentage = attribute_clusters_with_percentage.reset_index()  # reset the index if desired\n",
+    "\n",
+    "number_of_reviews = reviews_with_clusters['URL'].unique().shape[0]\n",
+    "number_of_reviews\n",
+    "attribute_clusters_with_percentage['percentage_of_observations_vs_total_number_of_reviews'] = attribute_clusters_with_percentage['observation_count'] / number_of_reviews * 100\n"
    ]
   },
   {
