--- a/notebooks/Data_Solutions_step_2_solution_generation.ipynb
+++ b/notebooks/Data_Solutions_step_2_solution_generation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        " 'when_the_product_is_used': \"The garden bed can be used at any time of the day or week, depending on the user's preference and gardening schedule.\"}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1541"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attributes_data['observation_count'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "220"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_of_reviews = reviews_with_clusters['URL'].unique().shape[0]\n",
+    "number_of_reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f6/0jn5yf2x1b319g8j96pnjbwh0000gn/T/ipykernel_17207/488290426.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  attributes_data['percentage_of_observations_vs_total_number_of_reviews'] = attributes_data['observation_count'] / number_of_reviews\n"
+     ]
+    }
+   ],
+   "source": [
+    "attributes_data.rename(columns={'attribute_percentage': 'percentage_of_observations_vs_total_number_per_attribute'}, inplace=True)\n",
+    "attributes_data['percentage_of_observations_vs_total_number_of_reviews'] = attributes_data['observation_count'] / number_of_reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -747,59 +811,65 @@
        "      <th>negative_sentiment</th>\n",
        "      <th>observation_count</th>\n",
        "      <th>rating_avg</th>\n",
-       "      <th>attribute_percentage</th>\n",
+       "      <th>percentage_of_observations_vs_total_number_per_attribute</th>\n",
+       "      <th>percentage_of_observations_vs_total_number_of_reviews</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Buyer Motivation</td>\n",
-       "      <td>Bed replacement</td>\n",
-       "      <td>0.662187</td>\n",
-       "      <td>0.128551</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.615385</td>\n",
+       "      <th>27</th>\n",
+       "      <td>Ease of Use</td>\n",
+       "      <td>Ease of Use</td>\n",
+       "      <td>0.781626</td>\n",
+       "      <td>0.104111</td>\n",
+       "      <td>80</td>\n",
+       "      <td>5</td>\n",
+       "      <td>86.956522</td>\n",
+       "      <td>0.363636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Buyer Motivation</td>\n",
-       "      <td>Buyer Motivation</td>\n",
-       "      <td>0.730204</td>\n",
-       "      <td>0.143931</td>\n",
-       "      <td>40</td>\n",
+       "      <th>10</th>\n",
+       "      <td>Customer Expectations</td>\n",
+       "      <td>Customer Expectations</td>\n",
+       "      <td>0.572575</td>\n",
+       "      <td>0.258386</td>\n",
+       "      <td>60</td>\n",
        "      <td>4</td>\n",
-       "      <td>30.769231</td>\n",
+       "      <td>46.511628</td>\n",
+       "      <td>0.272727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Buyer Motivation</td>\n",
-       "      <td>Motivation: Raised Bed Gardening</td>\n",
-       "      <td>0.553676</td>\n",
-       "      <td>0.240755</td>\n",
-       "      <td>25</td>\n",
+       "      <th>67</th>\n",
+       "      <td>Quality</td>\n",
+       "      <td>Quality</td>\n",
+       "      <td>0.766979</td>\n",
+       "      <td>0.117326</td>\n",
+       "      <td>54</td>\n",
        "      <td>4</td>\n",
-       "      <td>19.230769</td>\n",
+       "      <td>64.285714</td>\n",
+       "      <td>0.245455</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Buyer Motivation</td>\n",
-       "      <td>Motivation: To have a convenient way to garden</td>\n",
-       "      <td>0.737425</td>\n",
-       "      <td>0.123885</td>\n",
-       "      <td>23</td>\n",
+       "      <th>24</th>\n",
+       "      <td>Durability</td>\n",
+       "      <td>Durability</td>\n",
+       "      <td>0.785929</td>\n",
+       "      <td>0.102252</td>\n",
+       "      <td>51</td>\n",
        "      <td>4</td>\n",
-       "      <td>17.692308</td>\n",
+       "      <td>83.606557</td>\n",
+       "      <td>0.231818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Buyer Motivation</td>\n",
-       "      <td>To assist my mother with her mobility limitations</td>\n",
-       "      <td>0.522197</td>\n",
-       "      <td>0.315513</td>\n",
-       "      <td>30</td>\n",
-       "      <td>4</td>\n",
-       "      <td>23.076923</td>\n",
+       "      <th>21</th>\n",
+       "      <td>Design and Appearance</td>\n",
+       "      <td>Design and Appearance</td>\n",
+       "      <td>0.753909</td>\n",
+       "      <td>0.113694</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>86.206897</td>\n",
+       "      <td>0.227273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -810,112 +880,131 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>Where the product is used</td>\n",
-       "      <td>Garden Usage</td>\n",
-       "      <td>0.743312</td>\n",
-       "      <td>0.073956</td>\n",
-       "      <td>19</td>\n",
-       "      <td>5</td>\n",
-       "      <td>14.960630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>Where the product is used</td>\n",
-       "      <td>Outdoor use</td>\n",
-       "      <td>0.802748</td>\n",
-       "      <td>0.089551</td>\n",
-       "      <td>39</td>\n",
-       "      <td>5</td>\n",
-       "      <td>30.708661</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>Where the product is used</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>0.030868</td>\n",
-       "      <td>0.694864</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.362205</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>Where the product is used</td>\n",
-       "      <td>Usage</td>\n",
-       "      <td>0.555131</td>\n",
-       "      <td>0.321952</td>\n",
-       "      <td>14</td>\n",
+       "      <th>14</th>\n",
+       "      <td>Danger Appraisal</td>\n",
+       "      <td>No specific observations on the safety mentioned</td>\n",
+       "      <td>0.671206</td>\n",
+       "      <td>0.074277</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>11.023622</td>\n",
+       "      <td>3.703704</td>\n",
+       "      <td>0.004545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>Where the product is used</td>\n",
-       "      <td>Where the product is used</td>\n",
-       "      <td>0.568658</td>\n",
-       "      <td>0.232606</td>\n",
-       "      <td>19</td>\n",
+       "      <th>17</th>\n",
+       "      <td>Danger Appraisal</td>\n",
+       "      <td>Safe for children</td>\n",
+       "      <td>0.990170</td>\n",
+       "      <td>0.002611</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.703704</td>\n",
+       "      <td>0.004545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Noise and Smell</td>\n",
+       "      <td>Creates a soothing sound</td>\n",
+       "      <td>0.990017</td>\n",
+       "      <td>0.005117</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.846154</td>\n",
+       "      <td>0.004545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Noise and Smell</td>\n",
+       "      <td>No specific observations on the noise level or...</td>\n",
+       "      <td>0.671206</td>\n",
+       "      <td>0.074277</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>14.960630</td>\n",
+       "      <td>3.846154</td>\n",
+       "      <td>0.004545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Noise and Smell</td>\n",
+       "      <td>No issues</td>\n",
+       "      <td>0.006217</td>\n",
+       "      <td>0.851541</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.846154</td>\n",
+       "      <td>0.004545</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>105 rows × 7 columns</p>\n",
+       "<p>105 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Attribute  \\\n",
-       "0             Buyer Motivation   \n",
-       "1             Buyer Motivation   \n",
-       "2             Buyer Motivation   \n",
-       "3             Buyer Motivation   \n",
-       "4             Buyer Motivation   \n",
-       "..                         ...   \n",
-       "100  Where the product is used   \n",
-       "101  Where the product is used   \n",
-       "102  Where the product is used   \n",
-       "103  Where the product is used   \n",
-       "104  Where the product is used   \n",
+       "                Attribute                                      cluster_label  \\\n",
+       "27            Ease of Use                                        Ease of Use   \n",
+       "10  Customer Expectations                              Customer Expectations   \n",
+       "67                Quality                                            Quality   \n",
+       "24             Durability                                         Durability   \n",
+       "21  Design and Appearance                              Design and Appearance   \n",
+       "..                    ...                                                ...   \n",
+       "14       Danger Appraisal   No specific observations on the safety mentioned   \n",
+       "17       Danger Appraisal                                  Safe for children   \n",
+       "42        Noise and Smell                           Creates a soothing sound   \n",
+       "46        Noise and Smell  No specific observations on the noise level or...   \n",
+       "44        Noise and Smell                                          No issues   \n",
        "\n",
-       "                                         cluster_label  positive_sentiment  \\\n",
-       "0                                      Bed replacement            0.662187   \n",
-       "1                                     Buyer Motivation            0.730204   \n",
-       "2                     Motivation: Raised Bed Gardening            0.553676   \n",
-       "3       Motivation: To have a convenient way to garden            0.737425   \n",
-       "4    To assist my mother with her mobility limitations            0.522197   \n",
-       "..                                                 ...                 ...   \n",
-       "100                                       Garden Usage            0.743312   \n",
-       "101                                        Outdoor use            0.802748   \n",
-       "102                                            Unknown            0.030868   \n",
-       "103                                              Usage            0.555131   \n",
-       "104                          Where the product is used            0.568658   \n",
+       "    positive_sentiment  negative_sentiment  observation_count  rating_avg  \\\n",
+       "27            0.781626            0.104111                 80           5   \n",
+       "10            0.572575            0.258386                 60           4   \n",
+       "67            0.766979            0.117326                 54           4   \n",
+       "24            0.785929            0.102252                 51           4   \n",
+       "21            0.753909            0.113694                 50           5   \n",
+       "..                 ...                 ...                ...         ...   \n",
+       "14            0.671206            0.074277                  1           4   \n",
+       "17            0.990170            0.002611                  1           5   \n",
+       "42            0.990017            0.005117                  1           5   \n",
+       "46            0.671206            0.074277                  1           4   \n",
+       "44            0.006217            0.851541                  1           1   \n",
        "\n",
-       "     negative_sentiment  observation_count  rating_avg  attribute_percentage  \n",
-       "0              0.128551                  6           4              4.615385  \n",
-       "1              0.143931                 40           4             30.769231  \n",
-       "2              0.240755                 25           4             19.230769  \n",
-       "3              0.123885                 23           4             17.692308  \n",
-       "4              0.315513                 30           4             23.076923  \n",
-       "..                  ...                ...         ...                   ...  \n",
-       "100            0.073956                 19           5             14.960630  \n",
-       "101            0.089551                 39           5             30.708661  \n",
-       "102            0.694864                  3           2              2.362205  \n",
-       "103            0.321952                 14           4             11.023622  \n",
-       "104            0.232606                 19           4             14.960630  \n",
+       "    percentage_of_observations_vs_total_number_per_attribute  \\\n",
+       "27                                          86.956522          \n",
+       "10                                          46.511628          \n",
+       "67                                          64.285714          \n",
+       "24                                          83.606557          \n",
+       "21                                          86.206897          \n",
+       "..                                                ...          \n",
+       "14                                           3.703704          \n",
+       "17                                           3.703704          \n",
+       "42                                           3.846154          \n",
+       "46                                           3.846154          \n",
+       "44                                           3.846154          \n",
        "\n",
-       "[105 rows x 7 columns]"
+       "    percentage_of_observations_vs_total_number_of_reviews  \n",
+       "27                                           0.363636      \n",
+       "10                                           0.272727      \n",
+       "67                                           0.245455      \n",
+       "24                                           0.231818      \n",
+       "21                                           0.227273      \n",
+       "..                                                ...      \n",
+       "14                                           0.004545      \n",
+       "17                                           0.004545      \n",
+       "42                                           0.004545      \n",
+       "46                                           0.004545      \n",
+       "44                                           0.004545      \n",
+       "\n",
+       "[105 rows x 8 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "attributes_data"
+    "attributes_data.sort_values(by='percentage_of_observations_vs_total_number_of_reviews', ascending=False)"
    ]
   }
  ],
