--- a/dataUnderstanding/Data_Understanding.ipynb
+++ b/dataUnderstanding/Data_Understanding.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Memory Testing\n"
+    "## Memory Testing  ##\n"
    ]
   },
   {
