--- a/notebooks/RapidApi.ipynb
+++ b/notebooks/RapidApi.ipynb
@@ -340,6 +340,8 @@
     "\n",
     "# Amazon Scraper details\n",
     "# https://rapidapi.com/traject-data-traject-data-default/api/asin-data\n",
+    "# https://rapidapi.com/traject-data-traject-data-default/api/asin-data\n",
+    "\n",
     "base_url = \"https://asin-data.p.rapidapi.com/request\"\n",
     "api_key = \"70201ee0c8ed29661bc6ae00a84341fb\"\n",
     "headers = {\n",
@@ -367,8 +369,15 @@
     "async def get_product_reviews(asin):\n",
     "    start = time.time()\n",
     "    async with aiohttp.ClientSession() as session:\n",
-    "        url = f\"{base_url}{asin}/reviews\"\n",
-    "        async with session.get(url, headers=headers, params={\"api_key\": api_key}) as response:\n",
+    "        params = {\n",
+    "            \"type\":\"reviews\",\n",
+    "            \"asin\":asin,\n",
+    "            \"amazon_domain\":\"amazon.com\",\n",
+    "            \"reviewer_type\":\"verified_purchase\",\n",
+    "            \"sort_by\":\"most_recent\",\n",
+    "            \"global_reviews\":\"false\"\n",
+    "        }\n",
+    "        async with session.get(url=base_url, headers=headers, params=params) as response:\n",
     "            print(f\"Fetching product reviews for {asin} took {time.time() - start} seconds.\")\n",
     "            return await response.text()\n",
     "\n",
@@ -454,6 +463,66 @@
    ],
    "source": [
     "len(reviews['reviews'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['2_star_ratings', '3_star_percentage', 'average_rating', '1_star_ratings', '5_star_percentage', '3_star_ratings', 'top_critical_review', 'top_positive_review', 'product', 'total_ratings', '5_star_ratings', 'pagination', '4_star_percentage', '2_star_percentage', '4_star_ratings', '1_star_percentage', 'filtered_total_ratings', 'reviews', 'message', 'total_reviews', 'filtered_total_reviews'])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "583"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews[ 'total_reviews']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "583"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews[ 'filtered_total_reviews']"
    ]
   }
  ],
