data extraction from products with firestore

--- a/notebooks/user_management_data_upload.ipynb
+++ b/notebooks/user_management_data_upload.ipynb
@@ -17,13 +17,22 @@
     "cred = credentials.Certificate(cred_path)\n",
     "if not firebase_admin._apps:\n",
     "    firebase_admin.initialize_app(cred)\n",
-    "db = firestore.client()\n",
+    "db = firestore.client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
     "# Load users data from JSON file\n",
     "json_users_path  = '/Users/vladbordei/Documents/Development/ProductExplorer/data/external/user_jsons/users_example.json'\n",
     "with open(json_users_path) as f:\n",
     "    users_data = json.load(f)\n",
+    "\n",
     "\n",
     "# Upload users data to Firestore\n",
     "for user_id, user_data in users_data.items():\n",
@@ -32,14 +41,22 @@
     "        'name': user_data['name'],\n",
     "        'email': user_data['email'],\n",
     "        'current_package': user_data['current_package'],\n",
-    "        'remaining_analysis': user_data['remaining_analysis'],\n",
+    "        'remaining_investigations': user_data['remaining_investigations'],\n",
     "    })\n",
     "\n",
     "    # Upload subscriptions data to Firestore\n",
     "    for subscription_id, subscription_data in user_data['subscriptions'].items():\n",
     "        subscription_ref = user_ref.collection(u'subscriptions').document(subscription_id)\n",
     "        subscription_ref.set(subscription_data)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load payments data from JSON file\n",
     "json_payments_path  = '/Users/vladbordei/Documents/Development/ProductExplorer/data/external/payment_jsons/payment_example.json'\n",
     "with open(json_payments_path) as f:\n",
@@ -48,7 +65,40 @@
     "# Upload payments data to Firestore\n",
     "for payment_id, payment_data in payments_data.items():\n",
     "    payment_ref = db.collection(u'payments').document(payment_id)\n",
-    "    payment_ref.set(payment_data)\n"
+    "    payment_ref.set(payment_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load investigations data from JSON file\n",
+    "json_investigations_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/external/investigations_json/investigations_example.json'\n",
+    "with open(json_investigations_path) as f:\n",
+    "    investigations_data = json.load(f)\n",
+    "\n",
+    "# Upload investigations data to Firestore\n",
+    "for investigation_id, investigation_data in investigations_data.items():\n",
+    "    investigation_ref = db.collection(u'investigations').document(investigation_id)\n",
+    "    investigation_ref.set(investigation_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asin_list = [ \n",
+    "    'B0BCTTCSBZ',\n",
+    "    'B0BLNBS36G',\n",
+    "    'B0BW8Y2B8Z',\n",
+    "    'B08X2324ZL',\n",
+    "    'B09NR5JW8Y',\n",
+    "    'B091325ZMB'    \n",
+    "]"
    ]
   }
  ],
