--- a/notebooks/user_management.ipynb
+++ b/notebooks/user_management.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "User Data: User information is stored in the /users/ Firestore collection. Each document in this collection represents a user and contains fields like name, email, current_package, and remaining_investigations.\n",
+    "\n",
+    "Subscriptions: Each user has a /subscriptions/ subcollection. Each document in this subcollection represents a subscription the user has or had. It contains fields like package, start_date, end_date, payment_status, and payment_intent.\n",
+    "\n",
+    "Payments: Payments are stored in the /payments/ Firestore collection. Each document in this collection represents a payment made by a user. It contains fields like user_id, subscription_id, amount, date, status, and payment_intent.\n",
+    "\n",
+    "Investigations: Investigations are stored in the /investigations/ Firestore collection. Each document in this collection represents an investigation initiated by a user. It contains fields like user_id, timestamp, and asins.\n",
+    "\n",
+    "Stripe Integration: When a user decides to subscribe to a package, a Stripe PaymentIntent is created. The client_secret of this PaymentIntent is sent to the front end, which confirms the payment with Stripe. Stripe then sends a webhook event to your server, which updates the payment_status of the subscription in Firestore and creates a new payment document in the /payments/ collection.\n",
+    "\n",
+    "Investigations: Users spend their remaining investigations to initiate investigations. Each investigation can involve multiple ASINs. When a user initiates an investigation, a new document is created in the /investigations/ collection and the user's remaining investigations are decremented."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -25,8 +42,8 @@
     "    })\n",
     "    user_ref.update({\n",
     "        'current_package': package,\n",
-    "        # reset remaining_analysis based on package\n",
-    "        'remaining_analysis': 50 if package == 'basic' else 100,  # assuming premium users get 100 analyses\n",
+    "        # reset remaining_investigation based on package\n",
+    "        'remaining_investigation': 50 if package == 'basic' else 100,  # assuming premium users get 100 analyses\n",
     "    })\n",
     "\n",
     "def log_payment(user_id, subscription_id, amount, date, status, payment_intent_id):\n",
@@ -40,17 +57,17 @@
     "        'payment_intent': payment_intent_id,  # store the Stripe PaymentIntent ID\n",
     "    })\n",
     "\n",
-    "def use_analysis(user_id):\n",
+    "def use_investigation(user_id):\n",
     "    user_ref = db.collection(u'users').document(user_id)\n",
     "    user = user_ref.get()\n",
-    "    remaining = user.get('remaining_analysis')\n",
+    "    remaining = user.get('remaining_investigation')\n",
     "    if remaining > 0:\n",
     "        user_ref.update({\n",
-    "            'remaining_analysis': firestore.Increment(-1),\n",
+    "            'remaining_investigation': firestore.Increment(-1),\n",
     "        })\n",
-    "        return True  # analysis was successful\n",
+    "        return True  # investigation was successful\n",
     "    else:\n",
-    "        return False  # user is out of analysis\n"
+    "        return False  # user is out of investigation\n"
    ]
   },
   {
@@ -67,8 +84,12 @@
     "        investigation_ref = db.collection(u'investigations').document()\n",
     "        investigation_ref.set({\n",
     "            'user_id': user_id,\n",
-    "            'timestamp': firestore.SERVER_TIMESTAMP,  # let Firestore generate a server-side timestamp\n",
+    "            'received_timestamp': firestore.SERVER_TIMESTAMP,\n",
     "            'asins': asins,\n",
+    "            'status': 'received',\n",
+    "            'started_timestamp': None,\n",
+    "            'finished_timestamp': None,\n",
+    "            'reviewed_timestamps': [],\n",
     "        })\n",
     "        user_ref.update({\n",
     "            'remaining_investigations': firestore.Increment(-1),\n",
@@ -76,7 +97,51 @@
     "        return True  # investigation was successful\n",
     "    else:\n",
     "        return False  # user is out of investigations\n",
-    "}\n"
+    "\n",
+    "def update_investigation_status(investigation_id, new_status):\n",
+    "    investigation_ref = db.collection(u'investigations').document(investigation_id)\n",
+    "    investigation = investigation_ref.get()\n",
+    "    if investigation.exists:\n",
+    "        investigation_ref.update({\n",
+    "            'status': new_status,\n",
+    "            f'{new_status}_timestamp': firestore.SERVER_TIMESTAMP,\n",
+    "        })\n",
+    "        return True  # update was successful\n",
+    "    else:\n",
+    "        return False  # investigation does not exist\n",
+    "\n",
+    "def log_investigation_review(investigation_id):\n",
+    "    investigation_ref = db.collection(u'investigations').document(investigation_id)\n",
+    "    investigation = investigation_ref.get()\n",
+    "    if investigation.exists and investigation.get('status') == 'finished':\n",
+    "        investigation_ref.update({\n",
+    "            'reviewed_timestamps': firestore.ArrayUnion([firestore.SERVER_TIMESTAMP]),\n",
+    "        })\n",
+    "        return True  # log was successful\n",
+    "    else:\n",
+    "        return False  # investigation does not exist or is not finished yet\n",
+    "\n",
+    "def has_investigations_available(user_id):\n",
+    "    user_ref = db.collection(u'users').document(user_id)\n",
+    "    user = user_ref.get()\n",
+    "    remaining = user.get('remaining_investigations')\n",
+    "    return remaining > 0\n",
+    "\n",
+    "# Rest of your code remains same\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_id = '...'\n",
+    "if has_investigations_available(user_id):\n",
+    "    asins = ['B0BCTTCSBZ', 'B0BLNBS36G', 'B0BW8Y2B8Z', 'B091325ZMB']\n",
+    "    add_investigation(user_id, asins)\n",
+    "else:\n",
+    "    print('User has no remaining investigations')\n"
    ]
   },
   {
@@ -131,14 +196,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "B0BCTTCSBZ\n",
-    "B0BLNBS36G\n",
-    "B0BW8Y2B8Z\n",
-    "B08X2324ZL\n",
-    "B09NR5JW8Y\n",
-    "B091325ZMB"
-   ]
+   "source": []
   }
  ],
  "metadata": {
